--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,494 @@
 // main SASS file
+
+/***********************************************
+                NOTES
+light blue  #C7F7FF
+med blue    #89C0C9
+dark blue   #3a5E63
+light brown #C9A689
+dark brown  #7C593C
+light grey  #d4d4d4
+dark grey   #222
+
+                DEFAULTS
+***********************************************/
+
+@import "variables", "mixins", "queries";
+
+* {
+	padding: 0;
+	margin: 0;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	&:after {
+		-webkit-box-sizing: inherit;
+		box-sizing: inherit;
+	}
+	&:before {
+		-webkit-box-sizing: inherit;
+		box-sizing: inherit;
+	}
+}
+html {
+	font-size: 16px;
+	font-family: $font-family_1;
+	line-height: 1.6;
+}
+h1, h2, h3, h4{
+    font-family: Cardo, ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif; /* serif for the headings */
+}
+ul {
+	list-style: none;
+}
+
+/***********************************************
+                SPECIAL
+***********************************************/
+
+.clearfix {
+	&:after {
+		display: table;
+		clear: both;
+		content: "";
+	}
+}
+
+/***********************************************
+                LAYOUT
+***********************************************/
+
+.bg-header {
+	background-color: $white;
+	background-color: $lightBlue;
+	color: $darkGrey;
+	border-bottom: 1rem solid $medBlue;
+	border-top: 1rem solid $darkBlue;
+	position: relative;
+	&:before {
+		content: "";
+		position: absolute;
+		bottom: -1rem;
+		width: 30%;
+		height: 1rem;
+		background-color: $darkBlue;
+		left: 0;
+	}
+	&:after {
+		content: "";
+		position: absolute;
+		bottom: -1rem;
+		width: 30%;
+		height: 1rem;
+		background-color: $darkBlue;
+		right: 0;
+	}
+}
+.bg-focal {
+	background-color: $lightBrown;
+	color: $darkBrown;
+}
+.bg-content1 {
+	background-color: $white;
+	color: $darkGrey;
+}
+.bg-content2 {
+	background-color: $lightBlue;
+	color: $darkBlue;
+}
+.bg-footer {
+	background-color: $white;
+	color: $lightGrey;
+}
+header {
+	width: 400px;
+	margin: 0 auto;
+	position: relative;
+	h1 {
+		width: 100%;
+		padding: 0 2rem;
+	}
+	nav {
+		width: 100%;
+		>ul {
+			li {
+				width: 100%;
+				float: none;
+			}
+		}
+	}
+}
+section.focal {
+	width: 400px;
+	margin: 0 auto;
+}
+section.content1 {
+	padding: 2rem 0;
+}
+section.content2 {
+    @extend section.content2;
+}
+.row {
+	clear: both;
+}
+.col-2 {
+	width: 50%;
+	float: left;
+	padding-bottom: 2rem;
+	border-left: 1px solid $darkBlue;
+	margin-bottom: 2rem;
+}
+footer {
+	.col-2 {
+		&:first-child {
+			border-left: 0;
+		}
+	}
+	padding: 2rem 0;
+}
+
+/***********************************************
+                NAVIGATION
+***********************************************/
+
+header {
+	nav {
+		padding: 2rem 0;
+		clear: both;
+		>ul {
+			>li {
+				>a {
+					display: block;
+					text-align: center;
+					text-decoration: none;
+					color: $darkGrey;
+					font-size: 1.414rem;
+					letter-spacing: 0.25rem;
+					border: 1px solid $lightGrey;
+					border-bottom: none;
+					padding: 1.0rem 2rem;
+					line-height: 1;
+					background-color: $white;
+					&:hover {
+						font-weight: 700;
+						color: $darkBrown;
+					}
+				}
+			}
+		}
+	}
+}
+
+/***********************************************
+                CONTENT
+***********************************************/
+
+header {
+	h1 {
+		color: $darkBrown;
+		letter-spacing: 0.1rem;
+		i.fa-lg {
+			display: block;
+			width: 25%;
+			float: left;
+			font-size: 7rem;
+			line-height: 12.7936rem;
+			color: $lightBrown;
+			&~span {
+				float: right;
+				width: 75%;
+				font-size: 3.998rem;
+				padding-left: 1rem;
+				text-align: right;
+			}
+		}
+	}
+}
+.focal {
+	h2 {
+		font-size: 1.999rem;
+		line-height: 1.2;
+		padding: 2rem 2rem 1rem 2rem;
+	}
+	.author {
+		font-size: 1rem;
+		padding: 0.2rem 2rem 2rem;
+	}
+}
+.content1 {
+	h3 {
+		font-size: 1.999rem;
+		padding: 0.2rem 2rem 2rem;
+		i {
+			vertical-align: middle;
+			padding-right: 2rem;
+		}
+	}
+	p {
+		font-size: 1.414rem;
+		padding: 0.5rem 2rem 2rem;
+	}
+}
+.content2 {
+	h3 {
+		font-size: 1.999rem;
+		padding: 1rem 2rem 0.5rem;
+	}
+	h4 {
+		font-size: 1.999rem;
+		padding: 1rem 2rem 0rem;
+	}
+	p {
+		font-size: 1.414rem;
+		padding: 0.5rem 2rem 1rem;
+	}
+	li {
+		padding: 0.5rem 2rem;
+		font-size: 1.414rem;
+	}
+}
+
+/***********************************************
+                FOOTER
+***********************************************/
+
+footer {
+	h4 {
+		font-size: 1.414rem;
+		padding: 0.5rem 2rem;
+		color: $darkBrown;
+	}
+	p {
+		font-size: 1rem;
+		padding: 0.5rem 2rem;
+		color: $darkGrey;
+	}
+	.fa-circle {
+		color: $darkGrey;
+	}
+	h4[lang=de] {
+		display: block;
+	}
+	h4[lang=en] {
+		display: none;
+	}
+	h4[lang=ar] {
+		display: none;
+	}
+	h4[lang=ru] {
+		display: none;
+	}
+}
+
+/***********************************************
+                MEDIA QUERIES
+***********************************************/
+
+@media all and #{$breakpoint-small} {
+    
+	@include headerSmall();
+    
+	section.focal {
+		width: 700px;
+		margin: 0 auto;
+	}
+	section.content1 {
+		width: 700px;
+		margin: 0 auto;
+	}
+	section.content2 {
+		width: 700px;
+		margin: 0 auto;
+		h4 {
+			font-size: 1.414rem;
+		}
+		li {
+			font-size: 1.414rem;
+		}
+	}
+	
+    @include footerSmall();
+	
+	.col-4 {
+		width: 50%;
+		float: left;
+	}
+}
+@media all and #{$breakpoint-med} {
+    
+	@includ headerMed();
+    
+	section.focal {
+		width: 900px;
+		margin: 0 auto;
+		h2 {
+			width: 600px;
+			margin: 0 auto;
+		}
+		p.author {
+			width: 600px;
+			margin: 0 auto;
+		}
+	}
+	section.content1 {
+		width: 900px;
+		margin: 0 auto;
+		h3 {
+			font-size: 1.999rem;
+			font-weight: 100;
+			.fa-2x {
+				font-size: 1.999rem;
+				padding-right: 1rem;
+			}
+		}
+	}
+	section.content2 {
+		width: 900px;
+		margin: 0 auto;
+		h4 {
+			font-size: 1.414rem;
+		}
+		li {
+			font-size: 1.414rem;
+		}
+		p {
+			font-size: 1rem;
+			font-weight: 400;
+		}
+	}
+	
+   @include footerMed();
+	
+	.col-3 {
+		float: left;
+		width: 30%;
+		margin-left: 5%;
+		&:first-child {
+			margin-left: 0;
+		}
+	}
+	.col-4 {
+		width: 22%;
+		margin-left: 4%;
+		float: left;
+		&:first-child {
+			margin-left: 0;
+		}
+	}
+}
+@media all and #{$breakpoint-large} {
+    
+	@include headerLarge();
+    
+	section.focal {
+		width: 1400px;
+		margin: 0 auto;
+		h2 {
+			font-size: 3.998rem;
+			width: 600px;
+			margin: 0 auto;
+		}
+		p.author {
+			width: 600px;
+			margin: 0 auto;
+		}
+	}
+	section.content1 {
+		width: 1400px;
+		margin: 0 auto;
+		h3 {
+			font-size: 2.827rem;
+			font-weight: 100;
+			.fa-2x {
+				font-size: 2.827rem;
+				padding-right: 1rem;
+				vertical-align: middle;
+			}
+		}
+	}
+	section.content2 {
+		width: 1400px;
+		margin: 0 auto;
+		h4 {
+			font-size: 1.999rem;
+		}
+		li {
+			font-size: 1.999rem;
+		}
+		p {
+			font-size: 1.414rem;
+			font-weight: 400;
+		}
+	}
+	
+    @include footerLarge();
+	
+	.col-3 {
+		float: left;
+		width: 30%;
+		margin-left: 5%;
+		&:first-child {
+			margin-left: 0;
+		}
+	}
+	.col-4 {
+		width: 22%;
+		margin-left: 4%;
+		float: left;
+		&:first-child {
+			margin-left: 0;
+		}
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
