--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -12,8 +12,8 @@ dark grey   #222
 ***********************************************/
 
 // Fonts
-$font-family_1: 'Josefin Sans', ‘Trebuchet MS’, Helvetica, sans-serif;
-$font-family_2: Cardo, ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif;
+$sans-serif: 'Josefin Sans', ‘Trebuchet MS’, Helvetica, sans-serif;
+$serif: Cardo, ‘Palatino Linotype’, ‘Book Antiqua’, Palatino, serif;
 
 // Colors
 $darkGrey: #222;
